# Collision-avoidance-strategy-for-two-KMR-iiwa-robots-in-a-warehouse-crosssing

./: README.md
src/kmr_model/: CMakeLists.txt  package.xml
src/kmr_model/launch/: multi_spawn_robot_launch.py  spawn_kuka.py  spawn_kuka_launch.py
src/kmr_model/robot/: model.sdf
src/kmr_navigation/: CMakeLists.txt  package.xml
src/kmr_navigation/files/: CAET_kuka1.py  CAET_kuka1_EFH.py  CAET_kuka2.py  CAE_kuka1.py  CAE_kuka1_EFH.py  CAE_kuka2.py  CA_kuka1.py  CA_kuka1_EFH.py  CA_kuka2.py  keyboard1.py  keyboard2.py  navigate_point_scan1.py  navigate_point_scan2.py  navigate_waypoint_scan1.py  navigate_waypoint_scan2.py  trajectory_kuka1.py  trajectory_kuka2.py
src/kmr_simulation/: CMakeLists.txt  package.xml
src/kmr_simulation/launch/: multi_kuka_launch.py  start_world_launch.py
src/kmr_simulation/worlds/: awesome_warehouse.world  nobot_empty.world
